Fixed header offsets on scroll, saving collapsed state by tabId and visual updates

--- a/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
+++ b/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
@@ -8,11 +8,10 @@
         &_fixed {
             position: fixed;
             top: 40px;
-            left: var(--gn-aside-header-size);
-            right: 0px;
             background-color: var(--g-color-base-background);
             padding-left: 24px;
             padding-right: 24px;
+            margin-left: -24px;
             z-index: 10;
         }
 
@@ -40,11 +39,12 @@
     }
 
     &__controls-settings {
-        width: (100% / 36) * 2;
+        width: (100% / 36) * 1;
         flex-shrink: 0;
         display: flex;
         align-items: center;
         justify-content: end;
+        padding-left: 8px;
     }
 
     &__container-placeholder {
@@ -67,17 +67,16 @@
         display: flex;
         overflow: auto;
         flex-direction: row;
-        min-height: 44px;
+        min-height: 52px;
 
         &_fixed {
             position: fixed;
             top: 100px;
-            left: var(--gn-aside-header-size);
-            right: 0px;
             background-color: var(--g-color-base-background);
             border-bottom: 1px solid var(--g-color-line-generic);
             padding-left: 24px;
             padding-right: 24px;
+            margin-left: -24px;
             z-index: 10;
             max-height: calc(100vh - 100px);
         }
